--- a/01.Numpy/01_np_array.ipynb
+++ b/01.Numpy/01_np_array.ipynb
@@ -86,7 +86,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Wall time: 185 ms\n"
+      "Wall time: 214 ms\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Wall time: 6 ms\n"
+      "Wall time: 8 ms\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 11
     }
    ],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 12
     }
    ],
    "source": [
@@ -308,14 +308,14 @@
   },
   {
    "source": [
-    "### ndim & size"
+    "### ndim & size (몇차원이냐? 엘리먼트 갯수가 몇개냐?)"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -326,11 +326,246 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 13
     }
    ],
    "source": [
     "vector.ndim, matrix.ndim, tensor.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(4, 12, 48)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "vector.size, matrix.size, tensor.size"
+   ]
+  },
+  {
+   "source": [
+    "### dtype"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1. , 2. , 3. ],\n",
+       "       [4.5, 5. , 6. ]], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2, 3], [4.5, '5', '6']], dtype=np.float32)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "a.nbytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "vector.nbytes"
+   ]
+  },
+  {
+   "source": [
+    "### Reshape"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(2, 4)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "test_matrix = np.array([[1,2,3,4], [5,6,7,8]])\n",
+    "test_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "test_matrix.reshape(8,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [3, 4]],\n",
+       "\n",
+       "       [[5, 6],\n",
+       "        [7, 8]]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "test_matrix.reshape(2,2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6],\n",
+       "       [7, 8]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "test_matrix.reshape(-1,2)   # test_matrix.reshape(4,2)와 동일"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [3, 4]],\n",
+       "\n",
+       "       [[5, 6],\n",
+       "        [7, 8]]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "test_matrix.reshape(2,-1,2)   # test_matrix.reshape(2,2,2)와 동일"
+   ]
+  },
+  {
+   "source": [
+    "### flatten (다차원 -> 1차원)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "test_matrix.flatten()"
    ]
   },
   {
