--- a/04.Crawling/01_Basic.ipynb
+++ b/04.Crawling/01_Basic.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,6 +138,387 @@
     "header = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko'}\n",
     "req = requests.get(web_url, headers = header)\n",
     "soup = BeautifulSoup(req.text, 'html.parser')"
+   ]
+  },
+  {
+   "source": [
+    "### 태그를 이용해서 가져오는 방법"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"00_Example.html\") as fp:\n",
+    "    soup = BeautifulSoup(fp, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<div>\n",
+       "<p>a</p>\n",
+       "<p>b</p>\n",
+       "<p>c</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "first_div = soup.find('div')\n",
+    "first_div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "div_list = soup.find_all('div')\n",
+    "len(div_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<p>a</p>, <p>b</p>, <p>c</p>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "first_div_all_p = first_div.find_all('p')\n",
+    "first_div_all_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a\nb\nc\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p_tag in first_div_all_p:\n",
+    "    print(p_tag.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<p>a</p>,\n",
+       " <p>b</p>,\n",
+       " <p>c</p>,\n",
+       " <p>1</p>,\n",
+       " <p>2</p>,\n",
+       " <p>3</p>,\n",
+       " <p>X</p>,\n",
+       " <p>Y</p>,\n",
+       " <p>Z</p>,\n",
+       " <p>This is a paragraph.</p>,\n",
+       " <p>This is another paragraph.</p>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "all_ps = soup.find_all('p')\n",
+    "all_ps"
+   ]
+  },
+  {
+   "source": [
+    "### tag와 속성을 이용해서 가져오기"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<div id=\"ex_id\">\n",
+       "<p>X</p>\n",
+       "<p>Y</p>\n",
+       "<p>Z</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "ex_id_div = soup.find('div', {'id': 'ex_id'})\n",
+    "ex_id_div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<div id=\"ex_id\">\n",
+       "<p>X</p>\n",
+       "<p>Y</p>\n",
+       "<p>Z</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "# CSS Selector로 찾기\n",
+    "ex_id_div = soup.select_one('div#ex_id')\n",
+    "ex_id_div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<div id=\"ex_id\">\n",
+       "<p>X</p>\n",
+       "<p>Y</p>\n",
+       "<p>Z</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "ex_id_div = soup.select_one('#ex_id')\n",
+    "ex_id_div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<div id=\"ex_id\">\n",
+       "<p>X</p>\n",
+       "<p>Y</p>\n",
+       "<p>Z</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "ex_id_div = soup.select('#ex_id')\n",
+    "ex_id_div[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<div class=\"ex_class sample\">\n",
+       " <p>1</p>\n",
+       " <p>2</p>\n",
+       " <p>3</p>\n",
+       " </div>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "ex_class_div = soup.select('.ex_class.sample')\n",
+    "ex_class_div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<div class=\"ex_class sample\">\n",
+       " <p>1</p>\n",
+       " <p>2</p>\n",
+       " <p>3</p>\n",
+       " </div>,\n",
+       " <a class=\"a sample\" href=\"www.naver.com\">Naver</a>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "sample_class = soup.select('.sample')\n",
+    "sample_class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<a class=\"a sample\" href=\"www.naver.com\">Naver</a>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "soup.select('.a')"
+   ]
+  },
+  {
+   "source": [
+    "### 결과 가져오기\n",
+    "- get_text()    method\n",
+    "- string        attribute"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a\nb\nc\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p_tag in first_div_all_p:\n",
+    "    print(p_tag.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Naver'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "a_tag = soup.find('a')\n",
+    "a_tag.string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'www.naver.com'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "# attribute\n",
+    "a_tag['href']"
    ]
   },
   {
