--- a/04.Crawling/02_Hanbit.ipynb
+++ b/04.Crawling/02_Hanbit.ipynb
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,8 +677,266 @@
     "page_list = []; isbn_list = []\n",
     "\n",
     "for i_dict in info_list:\n",
-    "    for key, value in i_dict.values():"
+    "    tr_flag = False\n",
+    "    for key, value in i_dict.items():\n",
+    "        if key.find('저자') >= 0:\n",
+    "            al = value.split(',')\n",
+    "            al = list(map(lambda s: s.rstrip(), al))\n",
+    "            writer = ','.join(al)\n",
+    "            author_list.append(writer)\n",
+    "            continue\n",
+    "        if key.find('출간') >= 0:\n",
+    "            date_list.append(value)\n",
+    "            continue\n",
+    "        if key.find('페이지') >= 0:\n",
+    "            page = int(value[:-2])\n",
+    "            page_list.append(page)\n",
+    "            continue\n",
+    "        if key.find('ISBN') >= 0:\n",
+    "            isbn_list.append(value)\n",
+    "            continue\n",
+    "        if key.find('번역') >= 0:\n",
+    "            al = value.split(',')\n",
+    "            al = list(map(lambda s: s.rstrip(), al))\n",
+    "            writer = ','.join(al)\n",
+    "            trans_list.append(writer)\n",
+    "            tr_flag = True\n",
+    "            continue\n",
+    "        \n",
+    "    if not tr_flag:\n",
+    "        trans_list.append(' ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['이동훈 ',\n",
+       " '신윤환 ',\n",
+       " 'Steven Chapra , Raymond Canale ',\n",
+       " '박우창 , 남송휘 , 이현룡 ',\n",
+       " '임석구 ',\n",
+       " '우재남 ',\n",
+       " 'Alan Giambattista ',\n",
+       " 'Anthony Bedford , Kenneth M. Liechti ',\n",
+       " '홍순관 ',\n",
+       " '히든그레이스 논문통계팀 ',\n",
+       " '이병준 ',\n",
+       " '수학교재편찬위원회 ',\n",
+       " '노경섭 ',\n",
+       " '캐럴 애시, 로버트 B. 애시 ',\n",
+       " '김정섭 , 이호상 , 양인창 ',\n",
+       " '우재남 , 박길식 ',\n",
+       " '윤인성 ',\n",
+       " '이종원 , 정종필 ',\n",
+       " '오세종 , 신현석 ',\n",
+       " '고광일 ']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 59
+    }
+   ],
+   "source": [
+    "author_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " 520,\n",
+       " 1464,\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " 364,\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " ' ']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
+   "source": [
+    "trans_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[512,\n",
+       " 800,\n",
+       " 1008,\n",
+       " 604,\n",
+       " 572,\n",
+       " 520,\n",
+       " 1464,\n",
+       " 840,\n",
+       " 396,\n",
+       " 1448,\n",
+       " 448,\n",
+       " 620,\n",
+       " 364,\n",
+       " 688,\n",
+       " 448,\n",
+       " 580,\n",
+       " 480,\n",
+       " 496,\n",
+       " 496,\n",
+       " 364]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
+   "source": [
+    "page_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                               제목  \\\n",
+       "0                    4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)   \n",
+       "1                      IT CookBook, C 언어 일취월장(2판)   \n",
+       "2    Numerical Methods for Engineers, 8th Edition   \n",
+       "3  IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)   \n",
+       "4                      IT CookBook, 손에 잡히는 데이터 통신   \n",
+       "\n",
+       "                              저자 역자     판가  \n",
+       "0                            이동훈     27000  \n",
+       "1                            신윤환     28000  \n",
+       "2  Steven Chapra, Raymond Canale     45000  \n",
+       "3                  박우창, 남송휘, 이현룡     29000  \n",
+       "4                            임석구     29000  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>제목</th>\n      <th>저자</th>\n      <th>역자</th>\n      <th>판가</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)</td>\n      <td>이동훈</td>\n      <td></td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>IT CookBook, C 언어 일취월장(2판)</td>\n      <td>신윤환</td>\n      <td></td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Numerical Methods for Engineers, 8th Edition</td>\n      <td>Steven Chapra, Raymond Canale</td>\n      <td></td>\n      <td>45000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)</td>\n      <td>박우창, 남송휘, 이현룡</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>IT CookBook, 손에 잡히는 데이터 통신</td>\n      <td>임석구</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df = pd.DataFrame({'제목':title_list, '저자':author_list, '역자': trans_list, '판가':sp_list})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                                  제목  \\\n",
+       "0                       4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)   \n",
+       "1                         IT CookBook, C 언어 일취월장(2판)   \n",
+       "2       Numerical Methods for Engineers, 8th Edition   \n",
+       "3     IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)   \n",
+       "4                         IT CookBook, 손에 잡히는 데이터 통신   \n",
+       "5           IT CookBook, 파이썬 자료구조와 알고리즘 for Beginner   \n",
+       "6                           STEM CookBook, 대학물리학(5판)   \n",
+       "7                            STEM CookBook, 재료역학(2판)   \n",
+       "8                 IT CookBook, 디지털 회로 실험 with PSpice   \n",
+       "9                                     한번에 통과하는 논문 세트   \n",
+       "10                          데이터 과학을 위한 기초수학 with 파이썬   \n",
+       "11                                 미분적분학 : 대학수학의 첫걸음   \n",
+       "12                   제대로 시작하는 기초 통계학 : Excel 활용 (2판)   \n",
+       "13                                         친절한 미분적분학   \n",
+       "14                    IT CookBook, 4차 산업혁명과 정보통신의 이해   \n",
+       "15  IT CookBook, Android Studio를 활용한 안드로이드 프로그래밍(6판)   \n",
+       "16                          IT CookBook, C# 프로그래밍 2판   \n",
+       "17                      IT CookBook, 게임 제작으로 배우는 유니티   \n",
+       "18                   IT CookBook, 난생처음 R 코딩 & 데이터 분석   \n",
+       "19                  IT CookBook, 난생처음 인공지능 with 스크래치   \n",
+       "\n",
+       "                                     저자                       역자     판가  \n",
+       "0                                   이동훈                           27000  \n",
+       "1                                   신윤환                           28000  \n",
+       "2         Steven Chapra, Raymond Canale                           45000  \n",
+       "3                         박우창, 남송휘, 이현룡                           29000  \n",
+       "4                                   임석구                           29000  \n",
+       "5                                   우재남                           27000  \n",
+       "6                     Alan Giambattista                    김용은 외  43000  \n",
+       "7   Anthony Bedford, Kenneth M. Liechti  정광영, 김형종, 마정범, 최정호, 홍석무  38000  \n",
+       "8                                   홍순관                           22000  \n",
+       "9                          히든그레이스 논문통계팀                           85000  \n",
+       "10                                  이병준                           26000  \n",
+       "11                            수학교재편찬위원회                           28000  \n",
+       "12                                  노경섭                           25000  \n",
+       "13                     캐럴 애시, 로버트 B. 애시           김광수, 한빛수학교재연구소  32000  \n",
+       "14                        김정섭, 이호상, 양인창                           25000  \n",
+       "15                             우재남, 박길식                           32000  \n",
+       "16                                  윤인성                           26000  \n",
+       "17                             이종원, 정종필                           30000  \n",
+       "18                             오세종, 신현석                           25000  \n",
+       "19                                  고광일                           23000  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>제목</th>\n      <th>저자</th>\n      <th>역자</th>\n      <th>판가</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)</td>\n      <td>이동훈</td>\n      <td></td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>IT CookBook, C 언어 일취월장(2판)</td>\n      <td>신윤환</td>\n      <td></td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Numerical Methods for Engineers, 8th Edition</td>\n      <td>Steven Chapra, Raymond Canale</td>\n      <td></td>\n      <td>45000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)</td>\n      <td>박우창, 남송휘, 이현룡</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>IT CookBook, 손에 잡히는 데이터 통신</td>\n      <td>임석구</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>IT CookBook, 파이썬 자료구조와 알고리즘 for Beginner</td>\n      <td>우재남</td>\n      <td></td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>STEM CookBook, 대학물리학(5판)</td>\n      <td>Alan Giambattista</td>\n      <td>김용은 외</td>\n      <td>43000</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>STEM CookBook, 재료역학(2판)</td>\n      <td>Anthony Bedford, Kenneth M. Liechti</td>\n      <td>정광영, 김형종, 마정범, 최정호, 홍석무</td>\n      <td>38000</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>IT CookBook, 디지털 회로 실험 with PSpice</td>\n      <td>홍순관</td>\n      <td></td>\n      <td>22000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>한번에 통과하는 논문 세트</td>\n      <td>히든그레이스 논문통계팀</td>\n      <td></td>\n      <td>85000</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>데이터 과학을 위한 기초수학 with 파이썬</td>\n      <td>이병준</td>\n      <td></td>\n      <td>26000</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>미분적분학 : 대학수학의 첫걸음</td>\n      <td>수학교재편찬위원회</td>\n      <td></td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>제대로 시작하는 기초 통계학 : Excel 활용 (2판)</td>\n      <td>노경섭</td>\n      <td></td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>친절한 미분적분학</td>\n      <td>캐럴 애시, 로버트 B. 애시</td>\n      <td>김광수, 한빛수학교재연구소</td>\n      <td>32000</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>IT CookBook, 4차 산업혁명과 정보통신의 이해</td>\n      <td>김정섭, 이호상, 양인창</td>\n      <td></td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>IT CookBook, Android Studio를 활용한 안드로이드 프로그래밍(6판)</td>\n      <td>우재남, 박길식</td>\n      <td></td>\n      <td>32000</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>IT CookBook, C# 프로그래밍 2판</td>\n      <td>윤인성</td>\n      <td></td>\n      <td>26000</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>IT CookBook, 게임 제작으로 배우는 유니티</td>\n      <td>이종원, 정종필</td>\n      <td></td>\n      <td>30000</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>IT CookBook, 난생처음 R 코딩 &amp; 데이터 분석</td>\n      <td>오세종, 신현석</td>\n      <td></td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>IT CookBook, 난생처음 인공지능 with 스크래치</td>\n      <td>고광일</td>\n      <td></td>\n      <td>23000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 69
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('book_list.tsv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
