--- a/04.Crawling/02_Hanbit.ipynb
+++ b/04.Crawling/02_Hanbit.ipynb
@@ -826,42 +826,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                                               제목  \\\n",
-       "0                    4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)   \n",
-       "1                      IT CookBook, C 언어 일취월장(2판)   \n",
-       "2    Numerical Methods for Engineers, 8th Edition   \n",
-       "3  IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)   \n",
-       "4                      IT CookBook, 손에 잡히는 데이터 통신   \n",
-       "\n",
-       "                              저자 역자     판가  \n",
-       "0                            이동훈     27000  \n",
-       "1                            신윤환     28000  \n",
-       "2  Steven Chapra, Raymond Canale     45000  \n",
-       "3                  박우창, 남송휘, 이현룡     29000  \n",
-       "4                            임석구     29000  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>제목</th>\n      <th>저자</th>\n      <th>역자</th>\n      <th>판가</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)</td>\n      <td>이동훈</td>\n      <td></td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>IT CookBook, C 언어 일취월장(2판)</td>\n      <td>신윤환</td>\n      <td></td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Numerical Methods for Engineers, 8th Edition</td>\n      <td>Steven Chapra, Raymond Canale</td>\n      <td></td>\n      <td>45000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)</td>\n      <td>박우창, 남송휘, 이현룡</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>IT CookBook, 손에 잡히는 데이터 통신</td>\n      <td>임석구</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 68
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "df = pd.DataFrame({'제목':title_list, '저자':author_list, '역자': trans_list, '판가':sp_list})\n",
-    "df.head()"
+    "df = pd.DataFrame({'제목':title_list, '저자':author_list, '역자': trans_list, \n",
+    "                   '페이지':page_list, 'ISBN':isbn_list, '판가':sp_list})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -890,32 +866,54 @@
        "18                   IT CookBook, 난생처음 R 코딩 & 데이터 분석   \n",
        "19                  IT CookBook, 난생처음 인공지능 with 스크래치   \n",
        "\n",
-       "                                     저자                       역자     판가  \n",
-       "0                                   이동훈                           27000  \n",
-       "1                                   신윤환                           28000  \n",
-       "2         Steven Chapra, Raymond Canale                           45000  \n",
-       "3                         박우창, 남송휘, 이현룡                           29000  \n",
-       "4                                   임석구                           29000  \n",
-       "5                                   우재남                           27000  \n",
-       "6                     Alan Giambattista                    김용은 외  43000  \n",
-       "7   Anthony Bedford, Kenneth M. Liechti  정광영, 김형종, 마정범, 최정호, 홍석무  38000  \n",
-       "8                                   홍순관                           22000  \n",
-       "9                          히든그레이스 논문통계팀                           85000  \n",
-       "10                                  이병준                           26000  \n",
-       "11                            수학교재편찬위원회                           28000  \n",
-       "12                                  노경섭                           25000  \n",
-       "13                     캐럴 애시, 로버트 B. 애시           김광수, 한빛수학교재연구소  32000  \n",
-       "14                        김정섭, 이호상, 양인창                           25000  \n",
-       "15                             우재남, 박길식                           32000  \n",
-       "16                                  윤인성                           26000  \n",
-       "17                             이종원, 정종필                           30000  \n",
-       "18                             오세종, 신현석                           25000  \n",
-       "19                                  고광일                           23000  "
+       "                                     저자                       역자   페이지  \\\n",
+       "0                                   이동훈                            512   \n",
+       "1                                   신윤환                            800   \n",
+       "2         Steven Chapra, Raymond Canale                           1008   \n",
+       "3                         박우창, 남송휘, 이현룡                            604   \n",
+       "4                                   임석구                            572   \n",
+       "5                                   우재남                            520   \n",
+       "6                     Alan Giambattista                    김용은 외  1464   \n",
+       "7   Anthony Bedford, Kenneth M. Liechti  정광영, 김형종, 마정범, 최정호, 홍석무   840   \n",
+       "8                                   홍순관                            396   \n",
+       "9                          히든그레이스 논문통계팀                           1448   \n",
+       "10                                  이병준                            448   \n",
+       "11                            수학교재편찬위원회                            620   \n",
+       "12                                  노경섭                            364   \n",
+       "13                     캐럴 애시, 로버트 B. 애시           김광수, 한빛수학교재연구소   688   \n",
+       "14                        김정섭, 이호상, 양인창                            448   \n",
+       "15                             우재남, 박길식                            580   \n",
+       "16                                  윤인성                            480   \n",
+       "17                             이종원, 정종필                            496   \n",
+       "18                             오세종, 신현석                            496   \n",
+       "19                                  고광일                            364   \n",
+       "\n",
+       "             ISBN     판가  \n",
+       "0   9791156645320  27000  \n",
+       "1   9791156645313  28000  \n",
+       "2   9781260571387  45000  \n",
+       "3   9791156645290  29000  \n",
+       "4   9791156645283  29000  \n",
+       "5   9791156645252  27000  \n",
+       "6   9791156645207  43000  \n",
+       "7   9791156645191  38000  \n",
+       "8   9791156645122  22000  \n",
+       "9   9791156645177  85000  \n",
+       "10  9791156645160  26000  \n",
+       "11  9791156645269  28000  \n",
+       "12  9791156645153  25000  \n",
+       "13  9791156645276  32000  \n",
+       "14  9791156645047  25000  \n",
+       "15  9791156645245  32000  \n",
+       "16  9791156645238  26000  \n",
+       "17  9791156645108  30000  \n",
+       "18  9791156645139  25000  \n",
+       "19  9791156645221  23000  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>제목</th>\n      <th>저자</th>\n      <th>역자</th>\n      <th>판가</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)</td>\n      <td>이동훈</td>\n      <td></td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>IT CookBook, C 언어 일취월장(2판)</td>\n      <td>신윤환</td>\n      <td></td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Numerical Methods for Engineers, 8th Edition</td>\n      <td>Steven Chapra, Raymond Canale</td>\n      <td></td>\n      <td>45000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)</td>\n      <td>박우창, 남송휘, 이현룡</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>IT CookBook, 손에 잡히는 데이터 통신</td>\n      <td>임석구</td>\n      <td></td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>IT CookBook, 파이썬 자료구조와 알고리즘 for Beginner</td>\n      <td>우재남</td>\n      <td></td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>STEM CookBook, 대학물리학(5판)</td>\n      <td>Alan Giambattista</td>\n      <td>김용은 외</td>\n      <td>43000</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>STEM CookBook, 재료역학(2판)</td>\n      <td>Anthony Bedford, Kenneth M. Liechti</td>\n      <td>정광영, 김형종, 마정범, 최정호, 홍석무</td>\n      <td>38000</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>IT CookBook, 디지털 회로 실험 with PSpice</td>\n      <td>홍순관</td>\n      <td></td>\n      <td>22000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>한번에 통과하는 논문 세트</td>\n      <td>히든그레이스 논문통계팀</td>\n      <td></td>\n      <td>85000</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>데이터 과학을 위한 기초수학 with 파이썬</td>\n      <td>이병준</td>\n      <td></td>\n      <td>26000</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>미분적분학 : 대학수학의 첫걸음</td>\n      <td>수학교재편찬위원회</td>\n      <td></td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>제대로 시작하는 기초 통계학 : Excel 활용 (2판)</td>\n      <td>노경섭</td>\n      <td></td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>친절한 미분적분학</td>\n      <td>캐럴 애시, 로버트 B. 애시</td>\n      <td>김광수, 한빛수학교재연구소</td>\n      <td>32000</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>IT CookBook, 4차 산업혁명과 정보통신의 이해</td>\n      <td>김정섭, 이호상, 양인창</td>\n      <td></td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>IT CookBook, Android Studio를 활용한 안드로이드 프로그래밍(6판)</td>\n      <td>우재남, 박길식</td>\n      <td></td>\n      <td>32000</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>IT CookBook, C# 프로그래밍 2판</td>\n      <td>윤인성</td>\n      <td></td>\n      <td>26000</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>IT CookBook, 게임 제작으로 배우는 유니티</td>\n      <td>이종원, 정종필</td>\n      <td></td>\n      <td>30000</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>IT CookBook, 난생처음 R 코딩 &amp; 데이터 분석</td>\n      <td>오세종, 신현석</td>\n      <td></td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>IT CookBook, 난생처음 인공지능 with 스크래치</td>\n      <td>고광일</td>\n      <td></td>\n      <td>23000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>제목</th>\n      <th>저자</th>\n      <th>역자</th>\n      <th>페이지</th>\n      <th>ISBN</th>\n      <th>판가</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4차 산업혁명 시대를 위한 e-비즈니스 개론(4판)</td>\n      <td>이동훈</td>\n      <td></td>\n      <td>512</td>\n      <td>9791156645320</td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>IT CookBook, C 언어 일취월장(2판)</td>\n      <td>신윤환</td>\n      <td></td>\n      <td>800</td>\n      <td>9791156645313</td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Numerical Methods for Engineers, 8th Edition</td>\n      <td>Steven Chapra, Raymond Canale</td>\n      <td></td>\n      <td>1008</td>\n      <td>9781260571387</td>\n      <td>45000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>IT CookBook, SQL Server로 배우는 데이터베이스 개론과 실습(2판)</td>\n      <td>박우창, 남송휘, 이현룡</td>\n      <td></td>\n      <td>604</td>\n      <td>9791156645290</td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>IT CookBook, 손에 잡히는 데이터 통신</td>\n      <td>임석구</td>\n      <td></td>\n      <td>572</td>\n      <td>9791156645283</td>\n      <td>29000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>IT CookBook, 파이썬 자료구조와 알고리즘 for Beginner</td>\n      <td>우재남</td>\n      <td></td>\n      <td>520</td>\n      <td>9791156645252</td>\n      <td>27000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>STEM CookBook, 대학물리학(5판)</td>\n      <td>Alan Giambattista</td>\n      <td>김용은 외</td>\n      <td>1464</td>\n      <td>9791156645207</td>\n      <td>43000</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>STEM CookBook, 재료역학(2판)</td>\n      <td>Anthony Bedford, Kenneth M. Liechti</td>\n      <td>정광영, 김형종, 마정범, 최정호, 홍석무</td>\n      <td>840</td>\n      <td>9791156645191</td>\n      <td>38000</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>IT CookBook, 디지털 회로 실험 with PSpice</td>\n      <td>홍순관</td>\n      <td></td>\n      <td>396</td>\n      <td>9791156645122</td>\n      <td>22000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>한번에 통과하는 논문 세트</td>\n      <td>히든그레이스 논문통계팀</td>\n      <td></td>\n      <td>1448</td>\n      <td>9791156645177</td>\n      <td>85000</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>데이터 과학을 위한 기초수학 with 파이썬</td>\n      <td>이병준</td>\n      <td></td>\n      <td>448</td>\n      <td>9791156645160</td>\n      <td>26000</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>미분적분학 : 대학수학의 첫걸음</td>\n      <td>수학교재편찬위원회</td>\n      <td></td>\n      <td>620</td>\n      <td>9791156645269</td>\n      <td>28000</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>제대로 시작하는 기초 통계학 : Excel 활용 (2판)</td>\n      <td>노경섭</td>\n      <td></td>\n      <td>364</td>\n      <td>9791156645153</td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>친절한 미분적분학</td>\n      <td>캐럴 애시, 로버트 B. 애시</td>\n      <td>김광수, 한빛수학교재연구소</td>\n      <td>688</td>\n      <td>9791156645276</td>\n      <td>32000</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>IT CookBook, 4차 산업혁명과 정보통신의 이해</td>\n      <td>김정섭, 이호상, 양인창</td>\n      <td></td>\n      <td>448</td>\n      <td>9791156645047</td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>IT CookBook, Android Studio를 활용한 안드로이드 프로그래밍(6판)</td>\n      <td>우재남, 박길식</td>\n      <td></td>\n      <td>580</td>\n      <td>9791156645245</td>\n      <td>32000</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>IT CookBook, C# 프로그래밍 2판</td>\n      <td>윤인성</td>\n      <td></td>\n      <td>480</td>\n      <td>9791156645238</td>\n      <td>26000</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>IT CookBook, 게임 제작으로 배우는 유니티</td>\n      <td>이종원, 정종필</td>\n      <td></td>\n      <td>496</td>\n      <td>9791156645108</td>\n      <td>30000</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>IT CookBook, 난생처음 R 코딩 &amp; 데이터 분석</td>\n      <td>오세종, 신현석</td>\n      <td></td>\n      <td>496</td>\n      <td>9791156645139</td>\n      <td>25000</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>IT CookBook, 난생처음 인공지능 with 스크래치</td>\n      <td>고광일</td>\n      <td></td>\n      <td>364</td>\n      <td>9791156645221</td>\n      <td>23000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 69
+     "execution_count": 73
     }
    ],
    "source": [
@@ -924,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
