--- a/04.Crawling/07_Selenium.ipynb
+++ b/04.Crawling/07_Selenium.ipynb
@@ -288,15 +288,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "kbaseball: 20\n",
+      "wbaseball: 7\n",
+      "kfootball: 11\n",
+      "wfootball: 12\n",
+      "basketball: 7\n",
+      "volleyball: 5\n",
+      "golf: 6\n",
+      "general: 8\n",
+      "esports: 9\n"
+     ]
+    }
+   ],
    "source": [
     "base_url = 'https://sports.news.naver.com/'\n",
     "sub_url = '/news/index.nhn?isphoto=N'\n",
     "for event in events:\n",
-    "    url = f'{base_url}{event}{sub_url}'"
+    "    print(event, end=': ')\n",
+    "    url = f'{base_url}{event}{sub_url}'\n",
+    "    driver.get(url)\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    while True:\n",
+    "        page = driver.find_element_by_id('_pageList')\n",
+    "        try:\n",
+    "            next = page.find_element_by_class_name('next')\n",
+    "            if next:\n",
+    "                next.click()\n",
+    "        except:\n",
+    "            break;\n",
+    "\n",
+    "    page = driver.find_element_by_id('_pageList')\n",
+    "    try:\n",
+    "        atags = page.find_elements_by_tag_name('a')\n",
+    "        numPage = int(atags[-1].text)\n",
+    "    except:\n",
+    "        numPage = 1\n",
+    "\n",
+    "    print(numPage)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "kbaseball: 19 - 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, \n",
+      "wbaseball: 7 - 1, 2, 3, 4, 5, 6, 7, \n",
+      "kfootball: 11 - 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, \n",
+      "wfootball: 12 - 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, \n",
+      "basketball: 8 - 1, 2, 3, 4, 5, 6, 7, 8, \n",
+      "volleyball: 5 - 1, 2, 3, 4, 5, \n",
+      "golf: 6 - 1, 2, 3, 4, 5, 6, \n",
+      "general: 8 - 1, 2, 3, 4, 5, 6, 7, 8, \n",
+      "esports: 9 - 1, 2, 3, 4, 5, 6, 7, 8, 9, \n"
+     ]
+    }
+   ],
+   "source": [
+    "title_list = []\n",
+    "for event in events:\n",
+    "    print(event, end=': ')\n",
+    "    url = f'{base_url}{event}{sub_url}'\n",
+    "    driver.get(url)\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    while True:\n",
+    "        page = driver.find_element_by_id('_pageList')\n",
+    "        try:\n",
+    "            next = page.find_element_by_class_name('next')\n",
+    "            if next:\n",
+    "                next.click()\n",
+    "        except:\n",
+    "            break;\n",
+    "\n",
+    "    page = driver.find_element_by_id('_pageList')\n",
+    "    try:\n",
+    "        atags = page.find_elements_by_tag_name('a')\n",
+    "        numPage = int(atags[-1].text)\n",
+    "    except:\n",
+    "        numPage = 1\n",
+    "\n",
+    "    print(numPage, end=' - ')\n",
+    "\n",
+    "    for page in range(1, numPage+1):\n",
+    "        print(page, end=', ')\n",
+    "        url = f'{base_url}{event}{sub_url}&page={page}'\n",
+    "        driver.get(url)\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "        news = driver.find_element_by_id('_newsList')\n",
+    "        lis = news.find_elements_by_tag_name('li')\n",
+    "        for li in lis:\n",
+    "            text = li.find_element_by_class_name('title')\n",
+    "            title = text.find_element_by_tag_name('span').text\n",
+    "            title_list.append(title)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1628"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "len(title_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_str = '\\n'.join(title for title in title_list)\n",
+    "with open('sports.txt', 'w', encoding='utf-8') as fp:\n",
+    "    fp.write(title_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
